--- a/features/movies/src/main/res/layout/fragment_search.xml
+++ b/features/movies/src/main/res/layout/fragment_search.xml
@@ -56,13 +56,14 @@
 
         <!-- region Movies list and Movie fragment -->
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/search_recycler_view_movies"
             android:layout_width="match_parent"
-            android:scrollbars="none"
-            android:orientation="vertical"
             android:layout_height="match_parent"
             android:layout_marginStart="@dimen/default_content_margin"
             android:layout_marginTop="@dimen/default_content_margin"
             android:layout_marginEnd="@dimen/default_content_margin"
+            android:orientation="vertical"
+            android:scrollbars="none"
             tools:itemCount="4"
             tools:listitem="@layout/item_movie_list" />
         <!-- endregion -->
