--- a/features/movies/src/main/res/layout/item_movie_list.xml
+++ b/features/movies/src/main/res/layout/item_movie_list.xml
@@ -10,6 +10,7 @@
         android:id="@+id/item_movie_image"
         android:layout_width="64dp"
         android:layout_height="96dp"
+        android:scaleType="fitXY"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
