--- a/features/movies/src/main/res/layout/fragment_search.xml
+++ b/features/movies/src/main/res/layout/fragment_search.xml
@@ -33,6 +33,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/default_content_margin"
+                android:layout_marginTop="@dimen/title_margin"
                 android:layout_marginEnd="@dimen/default_content_margin"
                 android:paddingBottom="@dimen/margin_extra_big"
                 android:text="@string/title_search_any_movie"
