--- a/features/user/src/main/res/layout/fragment_user.xml
+++ b/features/user/src/main/res/layout/fragment_user.xml
@@ -21,13 +21,10 @@
 
     <TextView
         android:id="@+id/user_name_text_view"
-        style="@style/Center"
+        style="@style/Title.Center"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="27dp"
-        android:textAppearance="@style/Medium"
-        android:textColor="@color/light"
-        android:textSize="@dimen/text_size_title"
+        android:layout_marginTop="@dimen/title_margin_big"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/user_avatar_image_view"
