--- a/features/user/src/main/res/values/type.xml
+++ b/features/user/src/main/res/values/type.xml
@@ -1,6 +1,6 @@
 <resources>
 
-    <style name="Center">
+    <style name="Title.Center" parent="Title">
         <item name="android:textAlignment">center</item>
         <item name="android:gravity">center</item>
     </style>
