Добавить selectableItemBackground и обновить padding у item_movie_list

--- a/features/movies/src/main/res/layout/fragment_search.xml
+++ b/features/movies/src/main/res/layout/fragment_search.xml
@@ -60,10 +60,9 @@
             android:id="@+id/search_recycler_view_movies"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginStart="@dimen/default_content_margin"
-            android:layout_marginTop="@dimen/default_content_margin"
-            android:layout_marginEnd="@dimen/default_content_margin"
             android:orientation="vertical"
+            android:clipToPadding="false"
+            android:paddingTop="@dimen/default_content_margin"
             android:scrollbars="none"
             tools:itemCount="4"
             tools:listitem="@layout/item_movie_list" />
