--- a/features/login/src/main/res/drawable/btn_background_enabled.xml
+++ b/features/login/src/main/res/drawable/btn_background_enabled.xml
@@ -3,7 +3,7 @@
     android:color="@color/orange_dark">
     <item android:id="@android:id/background">
         <shape android:shape="rectangle">
-            <solid android:color="@color/accent" />
+            <solid android:color="@color/secondary" />
             <corners android:radius="@dimen/button_corner_radius" />
         </shape>
     </item>
