--- a/features/movies/src/main/res/drawable/ic_poster_placeholder.xml
+++ b/features/movies/src/main/res/drawable/ic_poster_placeholder.xml
@@ -1,5 +1,10 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@color/gray" />
+    <item>
+        <shape android:shape="rectangle">
+            <solid android:color="@color/gray" />
+            <corners android:radius="@dimen/item_movies_corner_radius" />
+        </shape>
+    </item>
     <item
         android:drawable="@drawable/ic_local_movies"
         android:gravity="center" />
