--- a/features/movies/src/main/res/layout/include_search.xml
+++ b/features/movies/src/main/res/layout/include_search.xml
@@ -12,29 +12,35 @@
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/search_input_layout"
-        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
+        style="@style/ThemeOverlay.TextInputLayout.Search"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="0.9"
-        app:hintEnabled="false">
+        app:startIconDrawable="@drawable/ic_search"
+        app:endIconTint="@color/appbar_icos_color"
+        app:hintEnabled="false"
+        app:startIconTint="@color/appbar_icos_color">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/search_edit_text"
+            style="@style/ThemeOverlay.TextInputEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:imeOptions="actionSearch"
             android:hint="@string/title_movies_search"
             android:inputType="textAutoCorrect"
             android:textSize="@dimen/text_size_regular" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <ImageView
+        android:id="@+id/search_change_view_type"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_gravity="center"
         android:layout_weight="0.1"
         android:scaleX="0.5"
         android:scaleY="0.5"
         android:src="@drawable/ic_movies_card"
+        android:tint="@color/appbar_icos_color"
         tools:ignore="ContentDescription" />
 
 </LinearLayout>
