--- a/core/src/main/res/values/colors.xml
+++ b/core/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="gray">#656D8A</color>
     <color name="gray_light">#DADADA</color>
     <color name="light">#E7EDFF</color>
+    <color name="light_transparent">#CCE7EDFF</color>
     <color name="green">#17B913</color>
     <color name="orange">#FE4E27</color>
     <color name="dark_blue">#2A2E42</color>
