--- a/features/movies/src/main/res/values/colors.xml
+++ b/features/movies/src/main/res/values/colors.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
-    <color name="appbar_icos_color">#E7EDFF</color>
+<resources xmlns:tools="http://schemas.android.com/tools">
+    <color name="search_appbar_icons_color">#E7EDFF</color>
+    <color name="search_appbar_color">#E5282C3F</color>
+
+    <color name="mtrl_textinput_default_box_stroke_color" tools:override="true">@color/gray
+    </color>
 </resources>
