--- a/features/movies/src/main/res/layout/fragment_favorite_movies.xml
+++ b/features/movies/src/main/res/layout/fragment_favorite_movies.xml
@@ -7,14 +7,14 @@
 
     <TextView
         android:id="@+id/favorite_title"
-        style="@style/Title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/default_content_margin"
         android:layout_marginTop="@dimen/title_margin"
         android:layout_marginEnd="@dimen/default_content_margin"
-        android:paddingBottom="42dp"
+        android:paddingBottom="@dimen/margin_extra_big"
         android:text="@string/title_favorite"
+        android:textAppearance="@style/Title"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -22,26 +22,24 @@
     <!-- region Empty favorite movies title -->
     <TextView
         android:id="@+id/favorite_title_empty"
-        style="@style/Medium"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/default_content_margin"
         android:layout_marginEnd="@dimen/default_content_margin"
         android:text="@string/title_favorite_empty"
-        android:textColor="@color/light"
-        android:textSize="@dimen/text_size_regular"
+        android:textAppearance="@style/Medium"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/favorite_title" />
 
     <TextView
         android:id="@+id/favorite_title_search"
-        style="@style/Medium"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/default_content_margin"
         android:layout_marginTop="@dimen/margin_regular"
         android:text="@string/title_favorite_search"
+        android:textAppearance="@style/Medium"
         android:textColor="@color/purple"
         android:textSize="@dimen/text_size_medium"
         app:layout_constraintStart_toStartOf="parent"
@@ -52,12 +50,12 @@
         android:id="@+id/favorite_image_background"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="60dp"
-        android:layout_marginTop="60dp"
-        android:layout_marginEnd="60dp"
-        android:layout_marginBottom="60dp"
+        android:layout_marginStart="@dimen/movies_background_image_margin"
+        android:layout_marginTop="@dimen/movies_background_image_margin"
+        android:layout_marginEnd="@dimen/movies_background_image_margin"
+        android:layout_marginBottom="@dimen/movies_background_image_margin"
         android:scaleType="fitEnd"
-        android:src="@drawable/ic_movie_night_144dp"
+        android:src="@drawable/ic_movie_night"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
