--- a/features/movies/src/main/res/layout/fragment_movie.xml
+++ b/features/movies/src/main/res/layout/fragment_movie.xml
@@ -6,7 +6,7 @@
 
     <TextView
         android:id="@+id/movie_name_title"
-        style="@style/Medium"
+        android:textAppearance="@style/Medium"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
