--- a/features/movies/src/main/res/layout/item_movie_list.xml
+++ b/features/movies/src/main/res/layout/item_movie_list.xml
@@ -12,8 +12,8 @@
 
     <ImageView
         android:id="@+id/item_movie_image"
-        android:layout_width="64dp"
-        android:layout_height="96dp"
+        android:layout_width="@dimen/item_movie_list_image_width"
+        android:layout_height="@dimen/item_movie_list_image_height"
         android:scaleType="fitXY"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
