--- a/features/movies/src/main/res/values/dimens.xml
+++ b/features/movies/src/main/res/values/dimens.xml
@@ -2,4 +2,13 @@
 <resources>
     <dimen name="item_movies_corner_radius">8dp</dimen>
     <dimen name="search_image_background_margin">120dp</dimen>
+    <dimen name="movies_background_image_margin">60dp</dimen>
+
+    <dimen name="empty_movies_background_image_margin">56dp</dimen>
+
+    <dimen name="item_movie_grid_image_width">152dp</dimen>
+    <dimen name="item_movie_grid_image_height">208dp</dimen>
+
+    <dimen name="item_movie_list_image_width">64dp</dimen>
+    <dimen name="item_movie_list_image_height">96dp</dimen>
 </resources>
