--- a/features/user/src/main/res/layout/fragment_user.xml
+++ b/features/user/src/main/res/layout/fragment_user.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:padding="@dimen/margin_regular">
 
     <ImageView
@@ -12,7 +11,7 @@
         android:layout_width="@dimen/user_avatar_size"
         android:layout_height="@dimen/user_avatar_size"
         android:layout_gravity="center"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="@dimen/margin_extra_big"
         android:contentDescription="@string/user_avatar_description"
         android:src="@drawable/ic_avatar_default"
         app:layout_constraintEnd_toEndOf="parent"
